<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintDimensionRatio="1:1"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#000000ff"
                android:contentDescription="@string/menu"
                app:srcCompat="@android:drawable/ic_menu_search" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/title_logo"
                    app:srcCompat="@android:drawable/ic_popup_sync" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/title"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="3dp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#000000ff"
                android:contentDescription="@string/todo"
                app:srcCompat="@android:drawable/ic_menu_slideshow" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded"
            android:backgroundTint="#FFD344"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingHorizontal="15dp"
            android:paddingBottom="10dp"
            android:layout_marginVertical="60dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:background="@color/white"
                android:paddingVertical="6dp"
                android:paddingHorizontal="3dp">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/kostka"
                    android:backgroundTint="#00000000"
                    android:scaleType="centerInside"
                    android:scaleX="2"
                    android:scaleY="2"
                    android:padding="12dp"
                    android:src="@drawable/question"
                    android:layout_marginHorizontal="2dp"
                    android:contentDescription="@string/kostka_do_gry"
                    />

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/kostka"
                    android:backgroundTint="#00000000"
                    android:scaleType="centerInside"
                    android:scaleX="2"
                    android:scaleY="2"
                    android:padding="12dp"
                    android:src="@drawable/question"
                    android:layout_marginHorizontal="2dp"
                    android:contentDescription="@string/kostka_do_gry"
                    />

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/kostka"
                    android:backgroundTint="#00000000"
                    android:scaleType="centerInside"
                    android:scaleX="2"
                    android:scaleY="2"
                    android:padding="12dp"
                    android:src="@drawable/question"
                    android:layout_marginHorizontal="2dp"
                    android:contentDescription="@string/kostka_do_gry"/>

                <ImageButton
                    android:id="@+id/imageButton6"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/kostka"
                    android:backgroundTint="#00000000"
                    android:scaleType="centerInside"
                    android:scaleX="2"
                    android:scaleY="2"
                    android:padding="12dp"
                    android:src="@drawable/question"
                    android:layout_marginHorizontal="2dp"
                    android:contentDescription="@string/kostka_do_gry"/>

                <ImageButton
                    android:id="@+id/imageButton7"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/kostka"
                    android:backgroundTint="#00000000"
                    android:scaleType="centerInside"
                    android:scaleX="2"
                    android:scaleY="2"
                    android:padding="12dp"
                    android:src="@drawable/question"
                    android:layout_marginHorizontal="2dp"
                    android:contentDescription="@string/kostka_do_gry"/>

            </LinearLayout>

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="190dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/lightrounded"
                android:backgroundTint="#040423"
                android:contentDescription="@string/next_round"
                android:cropToPadding="true"
                android:scaleX="1"
                android:scaleY="1"
                app:srcCompat="@android:drawable/ic_media_ff" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/continue_playing"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginStart="15dp"/>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="190dp">

                    <LinearLayout
                        android:id="@+id/gamesHub"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="15dp"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="160dp"
                            android:layout_height="180dp">

                            <ImageView
                                android:id="@+id/imageView653"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="10dp"
                                android:background="@drawable/rounded"
                                android:backgroundTint="@color/black"
                                android:contentDescription="@string/blackjack"
                                android:padding="8dp"
                                app:srcCompat="@drawable/blackjack" />

                            <Button
                                android:id="@+id/butto54n"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="120dp"
                                android:backgroundTint="#E2C81D"
                                android:text="@string/play"
                                app:cornerRadius="13dp"
                                android:contentDescription="@string/blackjack"/>
                        </FrameLayout>
                        <FrameLayout
                            android:layout_width="160dp"
                            android:layout_height="180dp">

                            <ImageView
                                android:id="@+id/imageView354"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="10dp"
                                android:background="@drawable/rounded"
                                android:backgroundTint="@color/black"
                                android:padding="8dp"
                                app:srcCompat="@drawable/blackjack"
                                android:contentDescription="@string/blackjack"/>

                            <Button
                                android:id="@+id/button34"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="120dp"
                                android:backgroundTint="#E2C81D"
                                android:text="@string/play"
                                app:cornerRadius="13dp" />
                        </FrameLayout>
                        <FrameLayout
                            android:layout_width="160dp"
                            android:layout_height="180dp">

                            <ImageView
                                android:id="@+id/imageView33"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="10dp"
                                android:background="@drawable/rounded"
                                android:backgroundTint="@color/black"
                                android:padding="8dp"
                                app:srcCompat="@drawable/blackjack"
                                android:contentDescription="@string/blackjack"/>

                            <Button
                                android:id="@+id/button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="120dp"
                                android:backgroundTint="#E2C81D"
                                android:text="@string/play"
                                app:cornerRadius="13dp"
                                android:contentDescription="@string/blackjack"/>
                        </FrameLayout>
                        <FrameLayout
                            android:layout_width="160dp"
                            android:layout_height="180dp">

                            <ImageView
                                android:id="@+id/imageView343"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="10dp"
                                android:background="@drawable/rounded"
                                android:backgroundTint="@color/black"
                                android:padding="8dp"
                                app:srcCompat="@drawable/blackjack"
                                android:contentDescription="@string/blackjack"/>

                            <Button
                                android:id="@+id/butto5454n"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="120dp"
                                android:backgroundTint="#E2C81D"
                                android:text="@string/play"
                                app:cornerRadius="13dp" />
                        </FrameLayout>
                        <FrameLayout
                            android:layout_width="160dp"
                            android:layout_height="180dp">

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="10dp"
                                android:background="@drawable/rounded"
                                android:backgroundTint="@color/black"
                                android:padding="8dp"
                                app:srcCompat="@drawable/blackjack"
                                android:contentDescription="@string/blackjack"/>

                            <Button
                                android:id="@+id/button434353"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="120dp"
                                android:backgroundTint="#E2C81D"
                                android:text="@string/play"
                                app:cornerRadius="13dp"
                                android:contentDescription="@string/blackjack"/>
                        </FrameLayout>
                    </LinearLayout>
                </HorizontalScrollView>

        </LinearLayout>

        <FrameLayout
            android:layout_width="360dp"
            android:layout_height="200dp"
            android:background="@drawable/rounded"
            android:backgroundTint="#040405">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="95dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/kot11"
                        android:layout_width="270dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/adcat"
                        app:srcCompat="@drawable/kot1" />

                    <ImageView
                        android:id="@+id/kot12"
                        android:layout_width="270dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/adcat"
                        app:srcCompat="@drawable/kot2" />

                    <ImageView
                        android:id="@+id/kot13"
                        android:layout_width="270dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/adcat"
                        app:srcCompat="@drawable/kot3" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="95dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/kot21"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/adcat"
                        app:srcCompat="@drawable/kot1" />

                    <ImageView
                        android:id="@+id/kot24"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/adcat"
                        app:srcCompat="@drawable/kot4" />

                </LinearLayout>
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/montserrat"
                android:textFontWeight="400"
                android:text="@string/ad"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:targetApi="28" />
        </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>